--- a/app/src/main/res/layout/hesap_ana.xml
+++ b/app/src/main/res/layout/hesap_ana.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <!-- BU DTEST -->
+    <!-- Nasılsın -->
 
     <ListView
         android:id="@+id/listViewMesaj"
