--- a/app/src/main/res/layout/hesap_ana.xml
+++ b/app/src/main/res/layout/hesap_ana.xml
@@ -6,6 +6,7 @@
     <!-- BU DTEST -->
     <!-- Nasılsın -->
     <!--iyiyim-->
+    <!-- bende iyiyim -->
 
     <ListView
         android:id="@+id/listViewMesaj"
