--- a/app/src/main/res/layout/kisi1.xml
+++ b/app/src/main/res/layout/kisi1.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="200dp"
+    android:orientation="vertical"
+    android:layout_width="200dp"
     android:layout_height="70dp"
     android:background="#ffafe7ff"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+
+
+    >
 
     <ImageView
         android:layout_width="50dp"
@@ -16,7 +20,7 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="kisi ismi"
         android:gravity="center_vertical"
