--- a/app/src/main/res/layout/rehber_item.xml
+++ b/app/src/main/res/layout/rehber_item.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="#ccc"
     android:padding="10dp">
 
     <TextView
         android:id="@+id/textRehberIsim"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="2dp"
         android:text="Kağan İNAN"
@@ -27,4 +29,4 @@
         android:textSize="12sp"
         android:textColor="#000" />
 
-</RelativeLayout>
+</LinearLayout>
