--- a/app/src/main/res/layout/rehber_item.xml
+++ b/app/src/main/res/layout/rehber_item.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#ccc"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:padding="10dp">
 
     <TextView
         android:id="@+id/textRehberIsim"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="2dp"
-        android:text="Kağan İNAN"
         android:fontFamily="sans-serif-light"
         android:textSize="21sp"
         android:typeface="sans"/>
@@ -23,10 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/textRehberIsim"
         android:fontFamily="sans-serif-light"
-        android:text="+90 541 495 57 42"
-        android:phoneNumber="true"
-        android:singleLine="true"
         android:textSize="12sp"
         android:textColor="#000" />
 
-</LinearLayout>
+</RelativeLayout>
