--- a/app/src/main/res/layout/list_mesajlar.xml
+++ b/app/src/main/res/layout/list_mesajlar.xml
@@ -7,9 +7,17 @@
 
     <RelativeLayout
         android:id="@+id/layoutMesajlarYuvarlak"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_centerVertical="true">
+
+        <TextView
+            android:id="@+id/bas_harf"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textSize="18sp"
+            android:textColor="@android:color/white"/>
 
     </RelativeLayout>
 
